<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    tools:context="com.belgaum.events.LoginActivity" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:text="@string/login_app_name" />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:contentDescription="@null"
        android:src="@drawable/round_logo2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:text="@string/app_tagline" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:background="@drawable/edittext_background_selector"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:hint="@string/edit_email"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        android:focusableInTouchMode="true"
        android:maxLength="30" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:focusableInTouchMode="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background_selector"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:maxLength="30" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/white"
        android:textSize="23sp"
        android:onClick="doLogin"
        android:textAllCaps="false"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/text_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:onClick="openDialog"
        android:textColor="@color/light_white"
        android:visibility="invisible"
        android:text="@string/text_forgot_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:visibility="invisible"
        android:gravity="center|bottom"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/text_note"
            android:textColor="@color/light_white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/light_white"
            android:linksClickable="true"
            android:text="@string/btn_signup"
            android:onClick="openSignUpScreen"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>