<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingBottom="5dp"
    tools:context="com.belgaum.events.SignUpActivity" >

    <!--
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>
    -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="false"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <Spinner
                android:id="@+id/spinner_prefix"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="270dp"
                android:gravity="center"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background_selector"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/edit_name"
                android:inputType="text"
                android:maxLength="30"
                android:textColor="@android:color/white" />

            <Spinner
                android:id="@+id/spinner_table_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/btn_dropdown"
                android:dropDownWidth="270dp"
                android:gravity="center"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/edit_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_background_selector"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/edit_email"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:textColor="@android:color/white" />

            <!--
                 <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background_selector"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/edit_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:textColor="@android:color/white" />
            -->

            <EditText
                android:id="@+id/edit_mobile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background_selector"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/edit_mobile"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/edit_business"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background_selector"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/edit_business"
                android:inputType="text"
                android:maxLength="30"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/edit_address"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background_selector"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/edit_address"
                android:inputType="text"
                android:maxLength="30"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/edit_dob"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background_selector"
                android:gravity="center"
                android:hint="@string/edit_dob"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/edit_anniversary"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_background_selector"
                android:gravity="center"
                android:hint="@string/edit_anniversary"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btn_image_pick"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@android:drawable/btn_default"
                android:onClick="doUploadImage"
                android:text="@string/btn_upload"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="23sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_selector"
                android:onClick="doSignUp"
                android:text="@string/btn_signup"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="23sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>