<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.belgaum.events.LoginActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:text="@string/lbl_event_name"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_post_event"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_background_selector"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        android:maxLength="30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_event_date"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_background_selector"
        android:focusableInTouchMode="true"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="30" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/lbl_event_time"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/edittext_background_selector"
        android:focusableInTouchMode="true"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:inputType="number"
        android:maxLength="30" />
    
    <Button
        android:id="@+id/btn_post"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_selector"
        android:text="@string/btn_post"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="23sp" />

</LinearLayout>